Match offline page url with fragment identifier stripped

BUG=647872
TEST=new test added

Review-Url: https://codereview.chromium.org/2353813002
Cr-Commit-Position: refs/heads/master@{#423025}

Former-commit-id: 20995bec1e1cdefa14e5aee3c9c99b960045cac8